--- a/src/components/Graphics/Graphics.module.css
+++ b/src/components/Graphics/Graphics.module.css
@@ -2,7 +2,7 @@
     background: #FFFFFF;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    width: fit-content;
+    width: 49%;
 }
 
 .graphic {
